# moonshot

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  LICENSE-2.md  LICENSE.md  NOTICES  NOTICES.md  README.md  coverage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  recipes.md  requirements.txt  requirements_mkdocs.txt  run_unit_test.sh  setup.py  test-report.html  test-report.json  test.py  test_api.py  test_augmented.py
.github/: developing-workflows.md  pull_request_template.md
.github/scripts/: create_backup.sh  install_ms_service.sh  moonshot_env  moonshot_test_env  moonshot_ui_env  run_smoke_test.sh  start_ms_service.sh
.github/workflows/: arc-test.yaml  codeql.yaml  docs-update.yaml  gh-event-notification.yaml  integration-test.yaml  license-file-gen.yaml  nightly-build.yaml  notices-file-gen.yaml  pre-build-checks.yaml  pre-build-checks.yml  pre-merge-checks-core.yml  pypi-deployment.yaml  sast-codeql.yaml  sast-sonarqube.yaml  sca-scan.yaml  sca_scan.yaml  sit-build.yaml  smoke-test-cli.yaml  smoke-test.yaml  test-pypi-deployment.yaml  test_api.yaml  uat-build.yaml  uat-deploy.yaml
acknowledgement/acknowledgement/: index.html
additional_information/additional_information/: index.html
api_reference/: web_api_swagger.json
api_reference/api_bookmark/: index.html
api_reference/api_connector/: index.html
api_reference/api_connector_endpoint/: index.html
api_reference/api_context_strategy/: index.html
api_reference/api_cookbook/: index.html
api_reference/api_dataset/: index.html
api_reference/api_environment_variables/: index.html
api_reference/api_metrics/: index.html
api_reference/api_prompt_template/: index.html
api_reference/api_recipe/: index.html
api_reference/api_red_teaming/: index.html
api_reference/api_result/: index.html
api_reference/api_run/: index.html
api_reference/api_runner/: index.html
api_reference/api_session/: index.html
api_reference/introduction/: index.html
api_reference/web_api_guide/: index.html
api_reference/web_api_swagger/: index.html  swagger-0f31a616.html
benchmark/benchmarking/: index.html
ci/: .flake8  createBadges.py  gen_pre_build_summ.sh  run-codeql-summ.sh  run-flake8.sh  run-pip-audit.sh  run-test.sh
cli/add_your_own_tests/: index.html
cli/benchmarking/: index.html
cli/cli_guide/: index.html
cli/connecting_endpoints/: index.html
cli/connecting_endpoints_old/: index.html
cli/getting_started_cli/: index.html
cli/red_teaming/: index.html
common_issues/: index.html
contributing/: index.html
contributor_guide/create_connector/: index.html
contributor_guide/create_sample/: index.html
contributor_guide/sample/: index.html
docs/: common_issues.md  components.md  contributing.md  faq.md  index.md  troubleshoot.md
docs/acknowledgement/: acknowledgement.md
docs/additional_information/: additional_information.md
docs/api_reference/: api_bookmark.md  api_cookbook.md  api_metrics.md  api_prompt_template.md  api_result.md  api_session.md  web_api_swagger.json  web_api_swagger.md
docs/appendix/: cookbooks.md  datasets.md  installation.md  jupyter-notebooks.md
docs/cli/: add_your_own_tests.md  benchmarking.md  cli_guide.md  connecting_endpoints.md  red_teaming.md
docs/contributor_guide/: create_connector.md
docs/detailed_guide/: add_your_own_tests.md  benchmarking.md  connecting_endpoints.md  moonshot_cli_detailed_guide.md  run_benchmarks_UI.md  run_customLLM_UI.md  run_redteaming_UI.md  starter_kit_cookbooks.md
docs/examples/: example.md
docs/getting_started/: first_test.md  installation.md  installation_cli.md  installation_ui.md  installation_web_api.md  overview.md  preinstallation.md  quick_install.md  quick_start.md  quick_start_cli.md  quick_start_library.md  quick_start_ui.md  quick_start_web_api.md  starter_kit.md  walkthrough.md
docs/resources/: attack_modules.md  cookbooks.md  datasets.md  jupyter_notebook.md  metrics.md  recipes.md
docs/troubleshoot/: troubleshoot.md
docs/tutorial/: create_cookbook.md  create_endpoint.md
docs/understanding_moonshot/: api.md  api_connector.md  api_connector_endpoint.md  api_context_strategy.md  api_dataset.md  api_environment_variables.md  api_recipe.md  api_red_teaming.md  api_run.md  api_runner.md  introduction.md  web_api_swagger.md
docs/web_api/: connector_endpoints.md  cookbook_endpoints.md  prompt_template_endpoints.md  recipe_endpoints.md  sessions_endpoints.md  web_api_guide.md
docs/web_ui/: benchmarking.md  choosing_relevant_tests.md  connecting_to_llms.md  cookbook.md  creating_custom_cookbooks.md  history.md  model_endpoint.md  red_teaming.md  redteaming.md  run_benchmark_test.md  running_benchmarks.md  utils.md  web_ui_guide.md
examples/: config.yml  sample-my-gpt4-config.json  test-openai-gpt35.ipynb
examples/deployment/: Dockerfile  docker-compose.yml  ms-env.env  ms-ui-env.env  run_installation_script.sh
examples/example/: index.html
examples/jupyter-notebook/: Moonshot - Benchmark Feature Walkthrough.ipynb  Moonshot - Pre-Req - Setup.ipynb  Moonshot Feature Walkthrough.ipynb  Tutorial 1 - Basic Workflow - Execute a Benchmark.ipynb  Tutorial 1 - Execute a Benchmark.ipynb  Tutorial 2 - Add your own test.ipynb  Tutorial 2 - Basic Workflow - Add your own test.ipynb  Tutorial 3 - Basic Workflow - Run Red Teaming Session.ipynb  Tutorial 4 - Advanced Workflow - Test Custom Application.ipynb  jupyter_notebook_env_setup.sh  test-openai-gpt35.ipynb
extension/connecting_endpoints/: index.html
faq/: index.html
getting_started/cli_guide/: index.html
getting_started/first_test/: index.html
getting_started/installation/: index.html
moonshot/: __main__.py  api.py  test_create_dataset.py
search/: search_index.json
src/moonshot/: api.py  (+2 more)
tests/: test_api.py  test_api_perf.py  test_api_pytest.py  test_benchmark_executor.py  test_cli.py  test_connectors.py  test_datasets.py  test_recipes.py  test_results.py  test_rt_api.py  test_run.py  test_runner.py
web_api/: .env.dev  __main__.py  app.py  config.yml  container.py  logging_conf.py
(+1097 files in other folders)
