[build-system]
requires = ["hatchling","hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "aiverify-moonshot"
version = "0.4.5"
authors = [
    { name="AI Verify Foundation", email="info@aiverify.sg" }
]
description = "AI Verify advances Gen AI testing with Project Moonshot."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "python-slugify==8.0.4",
    "python-dotenv==1.0.1",
    "ijson==3.3.0",
    "jinja2==3.1.4",
    "pydantic==2.8.2",
    "pyparsing==3.1.2",
    "xxhash==3.4.1",
    "datasets==2.20.0",
    "pandas==2.2.2",
    "numpy==1.26.4"
]

[project.optional-dependencies]
web-api = [
    "typing-extensions==4.12.2",
    "fastapi==0.112.0",
    "uvicorn==0.30.5",
    "dependency-injector==4.41.0",
]
cli = [
    "cmd2==2.4.3",
    "rich==13.7.1",
]
all = [
    "aiverify-moonshot[web-api]",
    "aiverify-moonshot[cli]",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "assets/",
  "ci/",
  "docs/",
  "mkdocs.yml",
  "examples/",
  "misc/",
  "poetry.lock",
  "tests/",
  "test-report.html",
  "test-report.json",
  "test-badge.svg",
  "cov-badge.svg",
  "coverage.json",
  "pytest.ini",
  "run_unit_test.sh"
]

[tool.hatch.build.targets.wheel]
packages = ["moonshot"]
exclude = [
  "assets/",
  "ci/",
  "docs/",
  "mkdocs.yml",
  "examples/",
  "misc/",
  "poetry.lock",
  "tests/",
  "test-report.html",
  "test-report.json",
  "test-badge.svg",
  "cov-badge.svg",
  "coverage.json",
  "pytest.ini",
  "run_unit_test.sh"
]


[project.urls]
Repository = "https://github.com/aiverify-foundation/moonshot"
Documentation = "https://aiverify-foundation.github.io/moonshot/"
Issues = "https://github.com/aiverify-foundation/moonshot/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.poetry]
name = "aiverify-moonshot"
version = "0.4.5"
description = "A simple and modular tool to evaluate and red-team any LLM application."
authors = ["The Moonshot Team <our.moonshot.team@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-slugify = "8.0.4"
python-dotenv = "1.0.1"
ijson = "3.3.0"
jinja2 = "3.1.4"
pydantic = "2.8.2"
pyparsing = "3.1.2"
xxhash = "3.4.1"
datasets = "2.20.0"
pandas = "2.2.2"
numpy = "1.26.4"
typing-extensions = "4.12.2"
fastapi = "0.112.0"
uvicorn = "0.30.5"
dependency-injector = "4.41.0"
cmd2 = "2.4.3"
rich = "13.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
coverage = "^7.6.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.0"
poetry-plugin-export = "^1.8.0"
pyinstrument = "^4.7.1"
anybadge = "^1.14.0"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-json = "^0.4.0"
