[project]
name = "moonshot"
version = "0.1.0"
authors = [
    { name="The Moonshot Team", email="our.moonshot.team@gmail.com" }
]
description = "Moonshot is a powerful utility designed to evaluate and measure your LLMs."
dependencies = [
    "openai==1.52.2",
    "python-slugify==8.0.4",
    "bert-score==0.3.13",
    "nltk==3.9.1",
    "py-readability-metrics==1.4.5",
    "rouge==1.0.1",
    "rouge-score==0.1.2",
    "aiometer==0.5.0",
    "aiohttp==3.10.10",
    "python-dotenv==1.0.1",
    "anthropic==0.37.1",
    "cmd2==2.5.0",
    "rich==13.9.3",
    "spacy==3.7.4",
    "sentence-transformers==3.2.1",
    "en-core-web-trf@https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl"
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry]
name = "moonshot"
version = "0.1.0"
description = "Moonshot is a powerful utility designed to evaluate and measure your LLMs."
authors = ["The Moonshot Team <our.moonshot.team@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "1.52.2"
python-slugify = "8.0.4"
bert-score = "0.3.13"
nltk = "3.9.1"
py-readability-metrics = "1.4.5"
rouge = "1.0.1"
rouge-score = "0.1.2"
aiometer = "0.5.0"
aiohttp = "3.10.10"
python-dotenv = "1.0.1"
anthropic = "0.37.1"
cmd2 = "2.5.0"
rich = "13.9.3"
spacy = "3.7.4"
sentence-transformers = "3.2.1"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl"}


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"
flake8 = "^6.1.0"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
