[build-system]
requires = ["hatchling","hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "aiverify-moonshot"
version = "0.7.4"
authors = [
    { name="AI Verify Foundation", email="info@aiverify.sg" }
]
description = "AI Verify advances Gen AI testing with Project Moonshot."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "python-slugify>=8.0.4",
    "python-dotenv>=1.1.0",
    "ijson>=3.3.0",
    "jinja2>=3.1.6",
    "pydantic==2.8.2",
    "pyparsing>=3.2.3",
    "xxhash>=3.5.0",
    "datasets~=3.2.0",
    "pandas>=2.2.2",
    "numpy~=1.26.4",
    "tenacity~=8.5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
web-api = [
    "typing-extensions==4.13.2",
    "fastapi>=0.115.4",
    "uvicorn>=0.30.6",
    "dependency-injector>=4.41.0",
]
cli = [
    "cmd2>=2.4.3",
    "rich>=13.8.0",
]
all = [
    "typing-extensions==4.13.2",
    "fastapi>=0.115.4",
    "uvicorn>=0.30.6",
    "dependency-injector>=4.41.0",
    "cmd2>=2.4.3",
    "rich>=13.8.0",
]

[tool.poetry.extras]
web-api = ["typing-extensions", "fastapi", "uvicorn", "dependency-injector"]
cli = ["cmd2", "rich"]
all = ["typing-extensions", "fastapi", "uvicorn", "dependency-injector", "cmd2", "rich"]

[[tool.poetry.packages]]
include = "moonshot"

[tool.hatch.build.targets.sdist]
exclude = [
  "assets/",
  "ci/",
  "docs/",
  "mkdocs.yml",
  "examples/",
  "misc/",
  "poetry.lock",
  "tests/",
  "test-report.html",
  "test-report.json",
  "test-badge.svg",
  "cov-badge.svg",
  "coverage.json",
  "pytest.ini",
  "run_unit_test.sh"
]

[tool.hatch.build.targets.wheel]
packages = ["moonshot"]
exclude = [
  "assets/",
  "ci/",
  "docs/",
  "mkdocs.yml",
  "examples/",
  "misc/",
  "poetry.lock",
  "tests/",
  "test-report.html",
  "test-report.json",
  "test-badge.svg",
  "cov-badge.svg",
  "coverage.json",
  "pytest.ini",
  "run_unit_test.sh"
]

[project.urls]
Repository = "https://github.com/aiverify-foundation/moonshot"
Documentation = "https://aiverify-foundation.github.io/moonshot/"
Issues = "https://github.com/aiverify-foundation/moonshot/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.poetry]
name = "aiverify-moonshot"
version = "0.7.4"
description = "A simple and modular tool to evaluate and red-team any LLM application."
authors = ["The Moonshot Team <our.moonshot.team@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-slugify = ">=8.0.4"
python-dotenv = ">=1.1.0"
ijson = ">=3.3.0"
jinja2 = ">=3.1.6"
pydantic = "2.8.2"
pyparsing = ">=3.2.3"
xxhash = ">=3.5.0"
datasets = "~=3.2.0"
pandas = ">=2.2.2"
numpy = "~=1.26.4"
tenacity = "~=8.5.0"
typing-extensions = "==4.13.2"
fastapi = ">=0.115.4"
uvicorn = ">=0.30.6"
dependency-injector = ">=4.41.0"
cmd2 = ">=2.4.3"
rich = ">=13.8.0"
h11 = "^0.16.0"
starlette = "^0.47.2"
urllib3 = "^2.5.0"
requests = "^2.32.4"
aiohttp = "^3.12.14"
cryptography = "^44.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
coverage = "^7.6.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.0"
poetry-plugin-export = "^1.8.0"
pyinstrument = "^4.7.1"
anybadge = "^1.14.0"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-json = "^0.4.0"
pytest-asyncio = "^0.24.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocs-swagger-ui-tag = "^0.7.1"
mkdocstrings-python = "^1.16.10"
h11 = "^0.16.0"
starlette = "^0.47.2"
urllib3 = "^2.5.0"
requests = "^2.32.4"
jinja2 = "^3.1.6"
aiohttp = "^3.12.14"
cryptography = "^44.0.1"
huggingface-hub = "==0.30.2"
anyio = "==4.8.0"
attrs = "==25.1.0"
filelock = "==3.17.0"
frozenlist = "==1.5.0"
multidict = "==6.1.0"
propcache = "==0.2.1"
pytz = "==2025.1"
python-dotenv = "==1.1.0"
tzdata = "==2025.1"
typing-extensions = "==4.13.2"
yarl = "==1.18.0"